Re-wrote CompaniesHouseV1.sol with new Data structures

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# Added to copy MyStruct[] memory into storage
+via_ir = true
 
 # fix the compiler version to standardize testing
 solc_version = "0.8.28"
